@@ -1,0 +1,4 @@
+# shellcheck disable=SC2034,SC2125
+
+A_NUMVAR=^[[:digit:]]+$
+A_TEXTVAR=^[[:word:]]+$
